--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-reader": "^1.2.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
